docs/changes/0.7.0/characters/Ivysaur.md
# Ivysaur — 0.7.0

## Changes

### Jab / Tilts

**Forward Tilt**
added skb: 10
hitbox id3 damage: 1 → 2
angle: 20 → 365
iasa: 42 → 37

**Down Tilt**
1st hit angle: 30 → 365
2nd hit sped up 1.3x
endlag sped up 1.2x

### Aerial Attacks

**Back Air**
1st hit damage: 2 → 3
2nd hit damage: 3 → 5
2nd hit kbg: 160 → 130
2nd hit bkb: 10 → 5
iasa: 45 → 39
startup slowed .5x
between hits sped up 1.5x
bkb: 7 → 25

**Down Air**
sweetspot damage: 8 → 12
sweetspot hitbox size increased
can now move horizontally during move

**Forward Air**
endlag sped up 1.3x
first active frame: 14 → 13

### Smash Attacks

**Up Smash**
sped up 1.3x

**Down Smash**
damage: 8 → 12
kbg: 80 → 90

### Special Moves

**Up B**
sweetspot priority: 4 → 0
range to grab edge increased
reaches the edge much faster
Ivysaur no longer goes into special fall after use
added more endlag
fixed end of up b animation

**Side B**
razor leaves last longer (50 → 60)
removed rng angles
sped up 1.2x

### Other

**Grab**
active frames: 13-14 → 9-12
fixed range

horizontal airspeed increased
